// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Player Empty 1`] = `
<section
  class="storybook-snapshot-container"
>
  <audio
    autoplay=""
    data-testid="audio"
  />
   
  <div
    class="flex items-center"
  >
    <span
      class="current svelte-bkxo3s"
    />
     
    <div
      class="player svelte-bkxo3s"
    >
      <span
        class="controls svelte-bkxo3s"
      >
         
        <span
          class="svelte-bkxo3s"
        >
          <button
            class="svelte-bb1epg iconOnly noBorder"
          >
            <i
              class="material-icons svelte-bb1epg"
            >
              shuffle
            </i>
             
             
             
          </button>
        </span>
         
        <button
          class="ml-2 mr-1 svelte-bb1epg iconOnly noBorder"
        >
          <i
            class="material-icons svelte-bb1epg"
          >
            skip_previous
          </i>
           
           
           
        </button>
         
        <button
          class="mx-1 svelte-bb1epg iconOnly large"
        >
          <i
            class="material-icons svelte-bb1epg"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="ml-1 mr-2 svelte-bb1epg iconOnly noBorder"
        >
          <i
            class="material-icons svelte-bb1epg"
          >
            skip_next
          </i>
           
           
           
        </button>
         
        <span
          class="svelte-bkxo3s"
        >
          <button
            class="svelte-bb1epg iconOnly noBorder"
          >
            <i
              class="material-icons svelte-bb1epg"
            >
              repeat
            </i>
             
             
             
          </button>
        </span>
         
      </span>
       
      <span
        class="controls time svelte-bkxo3s"
      >
        <span
          class="svelte-bkxo3s"
        >
          0:00
        </span>
         
        <div
          class="wrapper w-full svelte-1xlbdae"
        >
          <input
            class="w-full svelte-1xlbdae"
            max="0"
            min="0"
            type="range"
          />
           
          <div
            class="sliderTrack svelte-1xlbdae"
          >
            <span
              class="progress svelte-1xlbdae"
              style="right:100%"
            />
          </div>
        </div>
         
        <span
          class="svelte-bkxo3s"
        >
          0:00
        </span>
      </span>
    </div>
     
    <span
      class="playlist svelte-bkxo3s"
    >
      <div
        class="volume svelte-bkxo3s"
      >
        <span
          class="volume-slider svelte-bkxo3s"
        >
          <div
            class="wrapper undefined svelte-1xlbdae"
          >
            <input
              class=" svelte-1xlbdae"
              max="100"
              min="0"
              type="range"
            />
             
            <div
              class="sliderTrack svelte-1xlbdae"
            >
              <span
                class="progress svelte-1xlbdae"
                style="right:0%"
              />
            </div>
          </div>
        </span>
         
        <button
          class="svelte-bb1epg iconOnly noBorder"
        >
          <i
            class="material-icons svelte-bb1epg"
          >
            volume_up
          </i>
           
           
           
        </button>
      </div>
       
      <button
        class="svelte-bb1epg primary"
      >
        <i
          class="material-icons svelte-bb1epg"
        >
          queue_music
        </i>
         
        <span>
          Open queue
        </span>
         
         
      </button>
    </span>
  </div>
</section>
`;

exports[`Storyshots Components/Player With Track List 1`] = `
<section
  class="storybook-snapshot-container"
>
  <audio
    autoplay=""
    data-testid="audio"
    src="./no-duration.mp3"
  />
   
  <div
    class="flex items-center"
  >
    <span
      class="current svelte-bkxo3s"
    >
      <div
        class="undefined root svelte-whrgz7"
      >
        <a
          class="flex-none"
          href="#/album/1"
        >
          <img
            alt="./# Films/cover.jpg"
            class="h-16 w-16 text-xs actionable svelte-hn7eai rounded-sm"
            loading="lazy"
            src="./%23 Films/cover.jpg#nonce=0.1"
          />
           
          
        </a>
         
        <div
          class="track svelte-whrgz7"
        >
          <span
            class="title svelte-whrgz7"
          >
            file 1
          </span>
           
          <a
            class="text-sm underlined"
            href="#/artist/0"
            onclick="event.stopPropagation()"
          >
            Someone
          </a>
        </div>
         
         
      </div>
    </span>
     
    <div
      class="player svelte-bkxo3s"
    >
      <span
        class="controls svelte-bkxo3s"
      >
        <span
          aria-expanded="false"
          aria-haspopup="menu"
          class="wrapper svelte-350du5"
        >
          <button
            class="svelte-bb1epg iconOnly noBorder"
          >
            <i
              class="material-icons svelte-bb1epg"
            >
              library_add
            </i>
             
             
            
             
          </button>
        </span>
         
        
         
        <span
          class="svelte-bkxo3s"
        >
          <button
            class="svelte-bb1epg iconOnly noBorder"
          >
            <i
              class="material-icons svelte-bb1epg"
            >
              shuffle
            </i>
             
             
             
          </button>
        </span>
         
        <button
          class="ml-2 mr-1 svelte-bb1epg iconOnly noBorder"
        >
          <i
            class="material-icons svelte-bb1epg"
          >
            skip_previous
          </i>
           
           
           
        </button>
         
        <button
          class="mx-1 svelte-bb1epg iconOnly large"
        >
          <i
            class="material-icons svelte-bb1epg"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="ml-1 mr-2 svelte-bb1epg iconOnly noBorder"
        >
          <i
            class="material-icons svelte-bb1epg"
          >
            skip_next
          </i>
           
           
           
        </button>
         
        <span
          class="svelte-bkxo3s"
        >
          <button
            class="svelte-bb1epg iconOnly noBorder"
          >
            <i
              class="material-icons svelte-bb1epg"
            >
              repeat
            </i>
             
             
             
          </button>
        </span>
         
        <button
          class="invisible svelte-bb1epg iconOnly noBorder"
        >
          <i
            class="material-icons svelte-bb1epg"
          >
            favorite_border
          </i>
           
           
           
        </button>
      </span>
       
      <span
        class="controls time svelte-bkxo3s"
      >
        <span
          class="svelte-bkxo3s"
        >
          0:00
        </span>
         
        <div
          class="wrapper w-full svelte-1xlbdae"
        >
          <input
            class="w-full svelte-1xlbdae"
            max="0"
            min="0"
            type="range"
          />
           
          <div
            class="sliderTrack svelte-1xlbdae"
          >
            <span
              class="progress svelte-1xlbdae"
              style="right:100%"
            />
          </div>
        </div>
         
        <span
          class="svelte-bkxo3s"
        >
          0:00
        </span>
      </span>
    </div>
     
    <span
      class="playlist svelte-bkxo3s"
    >
      <div
        class="volume svelte-bkxo3s"
      >
        <span
          class="volume-slider svelte-bkxo3s"
        >
          <div
            class="wrapper undefined svelte-1xlbdae"
          >
            <input
              class=" svelte-1xlbdae"
              max="100"
              min="0"
              type="range"
            />
             
            <div
              class="sliderTrack svelte-1xlbdae"
            >
              <span
                class="progress svelte-1xlbdae"
                style="right:0%"
              />
            </div>
          </div>
        </span>
         
        <button
          class="svelte-bb1epg iconOnly noBorder"
        >
          <i
            class="material-icons svelte-bb1epg"
          >
            volume_up
          </i>
           
           
           
        </button>
      </div>
       
      <button
        class="svelte-bb1epg primary"
      >
        <i
          class="material-icons svelte-bb1epg"
        >
          queue_music
        </i>
         
        <span>
          Open queue
        </span>
         
         
        <div
          class="badge svelte-bb1epg halo"
        >
          4
        </div>
      </button>
    </span>
  </div>
</section>
`;
